--- a/.github/workflows/deploy-springboot-original.yml
+++ b/.github/workflows/deploy-springboot-original.yml
@@ -2,8 +2,10 @@ name: Build and Deploy Springboot Original App to AKS
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches: [ main ]  # Adjust branch as needed
+  push:
+    branches: [ main ]
+    paths:
+      - 'apps/springboot-org/**'
 permissions:
   id-token: write
   contents: read
