--- a/.github/workflows/dotnet-aks-deployment.yml
+++ b/.github/workflows/dotnet-aks-deployment.yml
@@ -2,9 +2,10 @@ name: Build and Deploy Dotnet Application to AKS
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches: [ main ]
+    paths:
+      - 'apps/dotnet/**'
 permissions:
   id-token: write
   contents: read
