--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -5,24 +5,20 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+    paths:
+      - 'docs/**/*.md'
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -31,13 +27,29 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
+      - name: Generate index.html
+        run: |
+          echo "<!DOCTYPE html>" > docs/index.html
+          echo "<html><head><title>Documentation Index</title>" >> docs/index.html
+          echo "<style>body{font-family:sans-serif;max-width:800px;margin:40px auto;padding:20px;line-height:1.6}</style>" >> docs/index.html
+          echo "</head><body>" >> docs/index.html
+          echo "<h1>Documentation Index</h1><ul>" >> docs/index.html
+          find docs -name "*.md" -type f | while read file; do
+            name=$(basename "$file" .md)
+            path=${file#docs/}
+            echo "<li><a href='${path%.*}.html'>$name</a></li>" >> docs/index.html
+          done
+          echo "</ul></body></html>" >> docs/index.html
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: 'docs/'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
